@@ -14,7 +14,7 @@ Ian Beckwith <ianb@erislabs.net>
               dmoz, w3html, w3link, w3css, w3rdf, debpts, rfc,
               sunonesearch, lsm, finkpkg, rpmsearch, macports,
               debpkghome, debvcsbrowse, scroogle, scirus,
-              scitopia, worldwidescience, debcodesearch
+              scitopia, worldwidescience, debcodesearch, jquery
         plus various tweaks/bugfixes/features.
 
 Moritz Muehlenhoff <jmm@inutil.org>
