@@ -1,0 +1,24 @@
+#!/bin/sh
+# elvis: jquery		-- Search the jQuery documentation (api.jquery.com)
+# ianb@erislabs.net 20130507
+
+. surfraw || exit 1
+
+w3_usage_hook () {
+    cat <<EOF
+Usage: $w3_argv0 [options] [search words]...
+Description:
+  Search the jQuery documentation (api.jquery.com)
+EOF
+    w3_global_usage
+}
+
+w3_config
+w3_parse_args "$@"
+# w3_args now contains a list of arguments
+if test -z "$w3_args"; then
+	w3_browse_url "http://api.jquery.com/"
+else
+    escaped_args=`w3_url_of_arg $w3_args`
+    w3_browse_url "http://api.jquery.com?s=${escaped_args}"
+fi
