@@ -1,0 +1,3 @@
+jquery ajaxError
+requests complete with an error
+
