@@ -1,3 +1,7 @@
+2013-05-07  Ian Beckwith  <ianb@erislabs.net>
+
+	* new elvi: jquery
+
 2013-05-04  Ian Beckwith  <ianb@erislabs.net>
 
 	* bump version to 2.2.9
